--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 <body class="">
     <header>
         <div class="container">
-            <h1 class="">My To-Do App</h1>
+            <h1 class="">My To-Do List</h1>
             <nav>
                 <a href="{{ url_for('tasks.view_task') }}">Home</a>
                 {% if 'user' in session %}
